push fix for .filters wrapping in linux

--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -58,7 +58,6 @@
     border-bottom: 1px solid $ddd;
 
     .filters {
-        width: 616px;
         float: right;
         text-align: right;
         padding: 0;
